--- a/springbootviacodespace/src/main/resources/static/index.html
+++ b/springbootviacodespace/src/main/resources/static/index.html
@@ -6,9 +6,13 @@
     <title>User Management</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Seu CSS personalizado -->
     <link rel="stylesheet" href="styles.css">
     <script>
+        let removedUsers = []; // Array para armazenar os usuários removidos
+
         async function fetchUsers() {
             try {
                 const response = await fetch('/api/users');
@@ -16,17 +20,18 @@
                 const users = await response.json();
                 const list = document.getElementById('user-list');
                 list.innerHTML = '';
-                let lastUser = null;
                 users.forEach(user => {
-                    const item = document.createElement('li');
-                    item.textContent = user.name;
-                    if (!lastUser) lastUser = item;
-                    list.appendChild(item);
+                    const listItem = document.createElement('li');
+                    listItem.className = 'list-group-item d-flex justify-content-between align-items-center';
+                    listItem.dataset.id = user.id; // Adiciona o id como atributo data
+                    listItem.innerHTML = `
+                        <span>${user.name}</span>
+                        <button class="btn btn-danger btn-sm ml-3" onclick="removeUser(${user.id})">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    `;
+                    list.appendChild(listItem);
                 });
-                if (lastUser) {
-                    lastUser.style.fontWeight = 'bold';
-                    lastUser.style.color = '#007bff'; // Bootstrap primary color
-                }
             } catch (error) {
                 console.error('Error fetching users:', error);
             }
@@ -49,20 +54,78 @@
             }
         }
 
-        window.onload = fetchUsers;
+        async function removeUser(userId) {
+            try {
+                const response = await fetch(`/api/users/${userId}`, {
+                    method: 'DELETE'
+                });
+                if (!response.ok) throw new Error('Failed to remove user');
+                
+                // Adiciona o usuário removido à lista de removidos
+                const userName = document.querySelector(`#user-list li[data-id="${userId}"] span`).textContent;
+                removedUsers.push({ id: userId, name: userName });
+                updateRemovedUsersList(); // Atualiza a lista de removidos
+                
+                fetchUsers(); // Atualiza a lista de usuários
+            } catch (error) {
+                console.error('Error removing user:', error);
+            }
+        }
+
+        function updateRemovedUsersList() {
+            const removedList = document.getElementById('removed-user-list');
+            removedList.innerHTML = '';
+            removedUsers.forEach(user => {
+                const listItem = document.createElement('li');
+                listItem.className = 'list-group-item d-flex justify-content-between align-items-center';
+                listItem.innerHTML = `
+                    <span>${user.name}</span>
+                `;
+                removedList.appendChild(listItem);
+            });
+        }
+
+        window.onload = function() {
+            fetchUsers();
+
+            // Adiciona um ouvinte de evento para o formulário
+            const form = document.getElementById('user-form');
+            form.addEventListener('submit', function(event) {
+                event.preventDefault(); // Evita o envio padrão do formulário
+                addUser();
+            });
+        };
     </script>
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center mb-4">CADASTRO DE USUARIOS</h1>
-        <div class="row justify-content-center">
+        <h1 class="text-center mb-4">CADASTRO DE USUÁRIOS</h1>
+        <div class="row">
             <div class="col-md-6">
-                <div class="form-group">
-                    <input type="text" id="user-name" class="form-control mb-2" placeholder="Digite o nome do usuario">
-                    <button class="btn btn-primary btn-block" onclick="addUser()">ADICIONAR</button>
+                <div class="card shadow-sm border-light">
+                    <div class="card-body">
+                        <form id="user-form">
+                            <div class="form-group">
+                                <input type="text" id="user-name" class="form-control mb-2" placeholder="Digite o nome do usuário" required>
+                                <button type="submit" class="btn btn-primary btn-block">ADICIONAR</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <h2 class="mt-4">USUARIOS:</h2>
-                <ul id="user-list" class="list-group"></ul>
+                <div class="card shadow-sm border-light mt-4">
+                    <div class="card-body">
+                        <h2 class="card-title">USUÁRIOS:</h2>
+                        <ul id="user-list" class="list-group"></ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card shadow-sm border-light">
+                    <div class="card-body">
+                        <h2 class="card-title">USUÁRIOS REMOVIDOS:</h2>
+                        <ul id="removed-user-list" class="list-group"></ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
