--- a/springbootviacodespace/src/main/resources/static/index.html
+++ b/springbootviacodespace/src/main/resources/static/index.html
@@ -21,16 +21,18 @@
                 const list = document.getElementById('user-list');
                 list.innerHTML = '';
                 users.forEach(user => {
-                    const listItem = document.createElement('li');
-                    listItem.className = 'list-group-item d-flex justify-content-between align-items-center';
-                    listItem.dataset.id = user.id; // Adiciona o id como atributo data
-                    listItem.innerHTML = `
-                        <span>${user.name}</span>
-                        <button class="btn btn-danger btn-sm ml-3" onclick="removeUser(${user.id})">
-                            <i class="fas fa-trash-alt"></i>
-                        </button>
-                    `;
-                    list.appendChild(listItem);
+                    if (user.active) { // Somente usuários ativos devem ser listados
+                        const listItem = document.createElement('li');
+                        listItem.className = 'list-group-item d-flex justify-content-between align-items-center';
+                        listItem.dataset.id = user.id; // Adiciona o id como atributo data
+                        listItem.innerHTML = `
+                            <span>${user.name}</span>
+                            <button class="btn btn-danger btn-sm ml-3" onclick="removeUser(${user.id})">
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
+                        `;
+                        list.appendChild(listItem);
+                    }
                 });
             } catch (error) {
                 console.error('Error fetching users:', error);
@@ -38,17 +40,27 @@
         }
 
         async function addUser() {
-            const name = document.getElementById('user-name').value;
+            const name = document.getElementById('user-name').value.trim();
             if (!name) return;
             try {
-                const response = await fetch('/api/users', {
+                // Verifica se o nome já existe
+                const response = await fetch('/api/users');
+                if (!response.ok) throw new Error('Failed to fetch users');
+                const users = await response.json();
+                const exists = users.some(user => user.name === name && user.active);
+                if (exists) {
+                    alert('User with this name already exists.');
+                    return;
+                }
+
+                const responseAdd = await fetch('/api/users', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ name })
                 });
-                if (!response.ok) throw new Error('Failed to add user');
+                if (!responseAdd.ok) throw new Error('Failed to add user');
                 document.getElementById('user-name').value = '';
-                fetchUsers();
+                fetchUsers(); // Recarrega a lista de usuários
             } catch (error) {
                 console.error('Error adding user:', error);
             }
@@ -60,13 +72,18 @@
                     method: 'DELETE'
                 });
                 if (!response.ok) throw new Error('Failed to remove user');
-                
+
                 // Adiciona o usuário removido à lista de removidos
                 const userName = document.querySelector(`#user-list li[data-id="${userId}"] span`).textContent;
                 removedUsers.push({ id: userId, name: userName });
                 updateRemovedUsersList(); // Atualiza a lista de removidos
-                
-                fetchUsers(); // Atualiza a lista de usuários
+
+                // Remove o usuário da lista de usuários ativos
+                const userListItem = document.querySelector(`#user-list li[data-id="${userId}"]`);
+                if (userListItem) {
+                    userListItem.remove();
+                }
+
             } catch (error) {
                 console.error('Error removing user:', error);
             }
